# comp1100-lab04

./: .ghcid  .replit  LICENSE  README.md  comp1100-lab04.cabal
src/: Controller.hs  Main.hs  Model.hs  View.hs
